--- a/web_sard/Views/Portage/CreateIN.cshtml
+++ b/web_sard/Views/Portage/CreateIN.cshtml
@@ -16,6 +16,7 @@
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="Customer.Title" />
         <input type="hidden" asp-for="FkContractType" />
+        <input type="hidden" asp-for="Weight1IsBascul" />
         <input type="hidden" name="idtype" value="@ContractType.Id" />
         <input type="hidden" name="kindPortage" value="@kindPortage" />
 
@@ -33,9 +34,16 @@
                                     <span asp-validation-for="CarRanande" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="CarMashin" class="control-label"></label>
-                                    <input asp-for="CarMashin" class="form-control" />
-                                    <span asp-validation-for="CarMashin" class="text-danger"></span>
+                                    <label asp-for="FkCar" class="control-label"></label>
+                                    <select asp-for="FkCar" class="form-control">
+                                        <option> </option>
+                                        @foreach (var item in cl._ListCar)
+                                        {
+                                            <option value="@item.Id">  @item.Title</option>
+                                        }
+                                    </select>
+
+                                    <span asp-validation-for="FkCar" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -62,7 +70,11 @@
                                         <div class="form-group ">
                                             <label class="control-label text-white">وزن</label>
                                             <div class="input-group">
-                                                <input asp-for="Weight1" value="@Model.Weight1.GetValueOrDefault().ToString("#####0.##")" class="form-control w-50  @(Model.Weight1.HasValue?"noactive":"") " readonly />@*noactive*@
+                                                <input asp-for="Weight1" value="@Model.Weight1.GetValueOrDefault().ToString("#####0.##")" 
+                                                       class="form-control w-50  @(Model.Weight1.HasValue?"noactive":"") " readonly
+                                                       ondblclick="$('Weight1IsBascul').val(false), $(this).removeAttr('readonly');"
+                                                       
+                                                       />@*noactive*@
                                                 <div class="input-group-btn  w-50">
                                                     <button class="btn btn-light w-100" id="Weight1B" type="button">
                                                         <i class="fa fa-hdd" id="Weight1I"> @web_sard.Models.cl.bascul.WeightBacul </i>
@@ -126,7 +138,7 @@
 
 
                                             <div class="input-group-btn">
-                                                <button class="btn btn-light" type="button" id="CbContract" onclick="Contractbutton('#FkContract','#vaziatContract')">
+                                                <button class="btn btn-light" type="button" id="CbContract" onclick="Contractbutton('#FkCustomer','#vaziatContract')">
                                                     <i class="fa fa-search-plus"></i>
                                                 </button>
                                             </div>
