--- a/web_sard/Views/Contract/ViewContractAjax.cshtml
+++ b/web_sard/Views/Contract/ViewContractAjax.cshtml
@@ -46,26 +46,26 @@
                                         </small> <br />
                                         @foreach (var l in row.mandelocations)
                                         {
-                                            <span class="badge badge-light">@l.Key  تعداد: @l.Value</span><br />
+                                            <span class="badge badge-light">@l.Key <span class="badge badge-dark badge-pill badge-counter"> @l.Value</span></span> 
                                         }
                                     </td>
                                     <td>
-                                        <span class="badge badge-info">@row.Weight.InSum - @row.Weight.OutSum</span> <br />
+                                        <span class="badge badge-info">@row.Weight.InSum.ToKilo() - @row.Weight.OutSum.ToKilo()</span> <br />
                                         <span class="badge badge-warning">  @row.Count.InSum - @row.Count.OutSum</span>
 
 
                                     </td>
                                     <td>
-                                        <span class="badge badge-info">@(row.Weight.InSum - row.Weight.OutSum)</span>
+                                        <span class="badge badge-info">@((row.Weight.InSum - row.Weight.OutSum).ToKilo())</span>
                                         <span class="badge badge-warning">@(row.Count.InSum - row.Count.OutSum)</span>
                                     </td>
                                     <td>
-                                        <span class="badge badge-info">@row.Weight.InMandeContract از <small>@row.Weight.InMaxContract</small></span>
-                                        <span class="badge badge-warning">@row.Count.InMandeContract از <small>@row.Count.InMaxContract</small></span>
+                                        <span class="badge badge-info  @(row.Weight.InMandeContract.HasValue?"":"invisible ")">@row.Weight.InMandeContract.ToKilo() از <small>@row.Weight.InMaxContract.ToKilo()</small></span>
+                                        <span class="badge badge-warning @(row.Count.InMandeContract.HasValue?"":"invisible ")">@row.Count.InMandeContract از <small>@row.Count.InMaxContract</small></span>
                                     </td>
                                     <td>
-                                        <span class="badge badge-info">@row.Weight.OutMandeContract از <small>@row.Weight.OutMaxContract</small></span>
-                                        <span class="badge badge-warning">@row.Count.OutMandeContract از <small>@row.Count.OutMaxContract</small></span>
+                                        <span class="badge badge-info @(row.Weight.OutMandeContract.HasValue?"":"invisible ")">@row.Weight.OutMandeContract.ToKilo() از <small>@row.Weight.OutMaxContract.ToKilo()</small></span>
+                                        <span class="badge badge-warning @(row.Count.OutMandeContract.HasValue?"":"invisible ")">@row.Count.OutMandeContract از <small>@row.Count.OutMaxContract</small></span>
                                     </td>
                                 </tr>
                             }
@@ -86,13 +86,10 @@
                         <br />
                     }
                     <span class="badge badge-info" data-toggle="tooltip" title="@item.Date.ToPersianDate()"> زمان قرارداد</span>
-
-
-
+                      
                     <br />
                     <span class="badge badge-info" data-toggle="tooltip" title="از @item.Azdate   تا @item.Tadate "> زمان تحویل</span>
-
-
+                     
                     <br />
                     <span class="badge badge-info  fa fa-plus" data-toggle="tooltip" title="@item.useradd @item.dateadd"> </span>
 
@@ -128,9 +125,7 @@
                             }
                         </span>
                     }
-
-
-
+                     
                 </div>
 
 
