--- a/web_sard/Views/Contract/Index.cshtml
+++ b/web_sard/Views/Contract/Index.cshtml
@@ -87,7 +87,7 @@
                 @Html.DisplayFor(modelItem => item.Custumer)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ContractType)
+                @Html.DisplayFor(modelItem => item.ContractType.Title)
 
             </td>
             @if (ContractType.IsEntry)
